--- a/public/transactions.html
+++ b/public/transactions.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand navbar-light bg-white">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                  <img src="/public/assets/images/nikel-small-logo.png" alt="small logo nikel" class="img-fluid" srcset="">
+                  <img src="./assets/images/nikel-small-logo.png" alt="small logo nikel" class="img-fluid" srcset="">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
